--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
   "description": "Support project for IoT platform course (ESEO)",
   "scripts": {
     "server": "node bin/server.js",
-    "curl": "curl -d '{\"username\":\"my_username\", \"email\":\"my_email\"}' -H \"Content-Type: application/json\" -X POST http://localhost:3000/data"
+    "client": "node bin/client.js",
+    "client-good-login": "node bin/client.js test pass",
+    "client-bad-login": "node bin/client.js test badpass",
+    "curl": "curl -d '{\"username\":\"my_username\", \"email\":\"my_email\"}' -H \"Content-Type: application/json\" -X POST http://localhost:3000/data",
+    "curl-good-login": "curl -d '{\"login\":\"test\", \"password\":\"pass\"}' -H \"Content-Type: application/json\" -X POST http://localhost:3000/login",
+    "curl-bad-login": "curl -d '{\"login\":\"test\", \"password\":\"badpassword\"}' -H \"Content-Type: application/json\" -X POST http://localhost:3000/login"
   },
   "author": "Jean-Samuel Reynaud <jeansamuel.reynaud@qowisio.com>",
   "license": "GPLv3",
   "dependencies": {
-    "express": "^4.18.1"
+    "axios": "^0.27.2",
+    "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1"
   }
 }
