--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "express": "^4.18.1",
+    "jsonschema": "^1.4.1",
     "jsonwebtoken": "^8.5.1"
   }
 }
