--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "client-bad-login": "node bin/client.js test badpass",
     "curl": "curl -d '{\"username\":\"my_username\", \"email\":\"my_email\"}' -H \"Content-Type: application/json\" -X POST http://localhost:3000/data",
     "curl-good-login": "curl -d '{\"login\":\"test\", \"password\":\"pass\"}' -H \"Content-Type: application/json\" -X POST http://localhost:3000/login",
-    "curl-bad-login": "curl -d '{\"login\":\"test\", \"password\":\"badpassword\"}' -H \"Content-Type: application/json\" -X POST http://localhost:3000/login"
+    "curl-bad-login": "curl -d '{\"login\":\"test\", \"password\":\"badpassword\"}' -H \"Content-Type: application/json\" -X POST http://localhost:3000/login",
+    "rabbitmq-docker": "docker run -it --rm --name rabbitmq -p 5672:5672 -p 15672:15672 rabbitmq:3-management",
+    "rabbitmq-receiver": "node bin/rabbitmq-receiver.js",
+    "rabbitmq-sender": "node bin/rabbitmq-sender.js"
   },
   "author": "Jean-Samuel Reynaud <jeansamuel.reynaud@qowisio.com>",
   "license": "GPLv3",
   "dependencies": {
+    "amqplib": "^0.10.0",
     "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonschema": "^1.4.1",
     "jsonwebtoken": "^8.5.1"
